Fix title breaking line with menu expanded on mobile

--- a/assets/css/sensei-course-theme/mobile.scss
+++ b/assets/css/sensei-course-theme/mobile.scss
@@ -54,7 +54,6 @@
 
 			&__left {
 				gap: 12px;
-				flex-wrap: wrap;
 				height: 30px;
 			}
 
